[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/mod_tool/dock.gd" type="Script" id=1]
[ext_resource path="res://addons/mod_tool/json_editor.gd" type="Script" id=2]
[ext_resource path="res://addons/mod_tool/input_string.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/mod_tool/input_string_multiline.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/mod_tool/create_mod.tscn" type="PackedScene" id=6]

[sub_resource type="InputEventKey" id=1]
control = true
meta = true
command = true
scancode = 67
unicode = 67

[sub_resource type="ShortCut" id=12]
resource_name = "Copy Selection"
shortcut = SubResource( 1 )
__meta__ = {
"original": SubResource( 1 )
}

[sub_resource type="InputEventKey" id=3]
shift = true
control = true
meta = true
command = true
scancode = 75
unicode = 75

[sub_resource type="ShortCut" id=13]
resource_name = "Clear Output"
shortcut = SubResource( 3 )
__meta__ = {
"original": SubResource( 3 )
}

[node name="ModToolsDock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 400 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_right = 10.0
tab_align = 0

[node name="Export" type="PanelContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HSplit" type="HSplitContainer" parent="TabContainer/Export"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1029.0
margin_bottom = 557.0

[node name="Console" type="VBoxContainer" parent="TabContainer/Export/HSplit"]
margin_right = 675.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( -230, -400 )
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="TabContainer/Export/HSplit/Console"]
margin_right = 675.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="TabContainer/Export/HSplit/Console/HBox"]
margin_top = 3.0
margin_right = 580.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Output:"

[node name="CopyOutput" type="Button" parent="TabContainer/Export/HSplit/Console/HBox"]
margin_left = 584.0
margin_right = 627.0
margin_bottom = 20.0
shortcut = SubResource( 12 )
text = "Copy"

[node name="ClearOutput" type="Button" parent="TabContainer/Export/HSplit/Console/HBox"]
margin_left = 631.0
margin_right = 675.0
margin_bottom = 20.0
shortcut = SubResource( 13 )
text = "Clear"

[node name="Output" type="RichTextLabel" parent="TabContainer/Export/HSplit/Console"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 675.0
margin_bottom = 550.0
focus_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "
Added base mod files to res://mods-unpacked/Test22-Test22"
scroll_following = true
selection_enabled = true

[node name="Settings" type="VBoxContainer" parent="TabContainer/Export/HSplit"]
margin_left = 687.0
margin_right = 1022.0
margin_bottom = 550.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( -1685, 180 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="TabContainer/Export/HSplit/Settings"]
margin_right = 335.0
margin_bottom = 14.0
text = "Export Settings"
align = 1

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Export/HSplit/Settings"]
margin_top = 18.0
margin_right = 335.0
margin_bottom = 488.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="TabContainer/Export/HSplit/Settings/Scroll"]
margin_right = 335.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="ModId" parent="TabContainer/Export/HSplit/Settings/Scroll/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_right = 335.0
hint_tooltip = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"
mouse_default_cursor_shape = 16
is_required = true
label_text = "Mod ID"
input_placeholder = "Author-ModName"
hint_text = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"

[node name="ExportPath" parent="TabContainer/Export/HSplit/Settings/Scroll/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 28.0
margin_right = 335.0
margin_bottom = 52.0
hint_tooltip = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"
mouse_default_cursor_shape = 16
label_text = "Export Path"
input_text = "res://zips"
input_placeholder = "Author-ModName"
hint_text = "ID of the mod to be exported.
Format: Namespace-ModName
(Often Author-ModName)"

[node name="HBox" type="HBoxContainer" parent="TabContainer/Export/HSplit/Settings/Scroll/VBox"]
margin_top = 56.0
margin_right = 335.0
margin_bottom = 80.0
hint_tooltip = "Modify the zip before compressing
to follow Thunderstore specifications"

[node name="Label" type="Label" parent="TabContainer/Export/HSplit/Settings/Scroll/VBox/HBox"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Thunderstore Export"
clip_text = true

[node name="ThunderstoreExport" type="CheckBox" parent="TabContainer/Export/HSplit/Settings/Scroll/VBox/HBox"]
unique_name_in_owner = true
margin_left = 169.0
margin_right = 335.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "On"

[node name="Buttons" type="PanelContainer" parent="TabContainer/Export/HSplit/Settings"]
margin_top = 492.0
margin_right = 335.0
margin_bottom = 550.0

[node name="VBox" type="VBoxContainer" parent="TabContainer/Export/HSplit/Settings/Buttons"]
margin_left = 7.0
margin_top = 7.0
margin_right = 328.0
margin_bottom = 51.0

[node name="CreateMod" type="Button" parent="TabContainer/Export/HSplit/Settings/Buttons/VBox"]
margin_right = 321.0
margin_bottom = 20.0
text = "Create new Mod"

[node name="Export" type="Button" parent="TabContainer/Export/HSplit/Settings/Buttons/VBox"]
margin_top = 24.0
margin_right = 321.0
margin_bottom = 44.0
text = "Export Mod"

[node name="Mod Manifest" type="PanelContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Mod Manifest"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1029.0
margin_bottom = 557.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="TabContainer/Mod Manifest/ScrollContainer"]
margin_right = 1022.0
margin_bottom = 572.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Category" type="LineEdit" parent="TabContainer/Mod Manifest/ScrollContainer/VBox"]
margin_right = 1010.0
margin_bottom = 24.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "Manifest"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Mod Manifest/ScrollContainer/VBox"]
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 48.0

[node name="Control" type="Control" parent="TabContainer/Mod Manifest/ScrollContainer/VBox/HBoxContainer"]
margin_right = 857.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SaveManifest" type="Button" parent="TabContainer/Mod Manifest/ScrollContainer/VBox/HBoxContainer"]
margin_left = 861.0
margin_right = 1010.0
margin_bottom = 20.0
text = "Save to manifest.json"

[node name="ModName" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 52.0
margin_right = 1010.0
margin_bottom = 76.0
hint_tooltip = "Name of the Mod.
Only letters, numbers and underscores allowed."
mouse_default_cursor_shape = 16
is_required = true
label_text = "Mod Name"
hint_text = "Name of the Mod.
Only letters, numbers and underscores allowed."

[node name="Namespace" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 80.0
margin_right = 1010.0
margin_bottom = 104.0
hint_tooltip = "Namespace of the Mod.
Often just the main author or team name.
Only letters, numbers and underscores allowed."
mouse_default_cursor_shape = 16
is_required = true
label_text = "Namespace"
hint_text = "Namespace of the Mod.
Often just the main author or team name.
Only letters, numbers and underscores allowed."

[node name="Version" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 108.0
margin_right = 1010.0
margin_bottom = 132.0
hint_tooltip = "Semantic version string.
Only integers and periods allowed.
Format: {major}.{minor}.{patch}
For reference, see https://semver.org"
mouse_default_cursor_shape = 16
is_required = true
label_text = "Version"
input_text = "0.0.1"
hint_text = "Semantic version string.
Only integers and periods allowed.
Format: {major}.{minor}.{patch}
For reference, see https://semver.org"

[node name="WebsiteUrl" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 136.0
margin_right = 1010.0
margin_bottom = 160.0
hint_tooltip = "URL for your website or repository."
mouse_default_cursor_shape = 16
label_text = "Mod website URL"
input_placeholder = "https://example.com"
hint_text = "URL for your website or repository."

[node name="Dependencies" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 164.0
margin_right = 1010.0
margin_bottom = 188.0
hint_tooltip = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"
mouse_default_cursor_shape = 16
label_text = "Dependencies"
input_placeholder = "Namespace-ModName, Author-Name"
hint_text = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"

[node name="Description" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 192.0
margin_right = 1010.0
margin_bottom = 404.0
label_text = "Description"

[node name="Category2" type="LineEdit" parent="TabContainer/Mod Manifest/ScrollContainer/VBox"]
margin_top = 408.0
margin_right = 1010.0
margin_bottom = 432.0
mouse_filter = 2
mouse_default_cursor_shape = 0
text = "Godot Extra"
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="Authors" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 436.0
margin_right = 1010.0
margin_bottom = 460.0
hint_tooltip = "Comma-separated list of Authors"
mouse_default_cursor_shape = 16
label_text = "Authors"
input_placeholder = "Author1, Autor2"
hint_text = "Comma-separated list of Authors"

[node name="Incompatibilities" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 464.0
margin_right = 1010.0
margin_bottom = 488.0
hint_tooltip = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"
mouse_default_cursor_shape = 16
label_text = "Incompatible Mods"
input_placeholder = "Namespace-ModName, Author-Name"
hint_text = "Comma-separated list of mod IDs.
Only letters, numbers and underscores allowed.
A single dash in the middle is required.
Format: {namespace}-{name}"

[node name="ComptatibleGameVersions" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 492.0
margin_right = 1010.0
margin_bottom = 516.0
hint_tooltip = "Comma-separated list of valid game versions."
mouse_default_cursor_shape = 16
label_text = "Compatible Game Versions"
input_placeholder = "1.0.0, 1.2.0"
hint_text = "Comma-separated list of valid game versions."

[node name="ComptatibleModLoaderVersions" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 520.0
margin_right = 1010.0
margin_bottom = 544.0
hint_tooltip = "Comma-separated list of ModLoader versions."
mouse_default_cursor_shape = 16
label_text = "Compatible Mod Loader Versions"
input_placeholder = "5.0.0, 4.1.0"
hint_text = "Comma-separated list of ModLoader versions."

[node name="Tags" parent="TabContainer/Mod Manifest/ScrollContainer/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 548.0
margin_right = 1010.0
margin_bottom = 572.0
hint_tooltip = "Compatible ModLoader Versions"
mouse_default_cursor_shape = 16
label_text = "Tags"
input_placeholder = "Tag1, Tag2"
hint_text = "Compatible ModLoader Versions"

[node name="Default Configuration" type="PanelContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBox" type="VBoxContainer" parent="TabContainer/Default Configuration"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1925.0
margin_bottom = 1037.0

[node name="HBox" type="HBoxContainer" parent="TabContainer/Default Configuration/VBox"]
margin_right = 1918.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="TabContainer/Default Configuration/VBox/HBox"]
margin_top = 13.0
margin_right = 1551.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Default values for user mod configuration "

[node name="ErrorLabel" type="Label" parent="TabContainer/Default Configuration/VBox/HBox"]
unique_name_in_owner = true
margin_left = 1555.0
margin_top = 13.0
margin_right = 1635.0
margin_bottom = 27.0
text = "JSON is valid"

[node name="ShouldValidate" type="CheckButton" parent="TabContainer/Default Configuration/VBox/HBox"]
unique_name_in_owner = true
margin_left = 1639.0
margin_right = 1715.0
margin_bottom = 40.0
pressed = true
flat = true

[node name="VSeparator" type="VSeparator" parent="TabContainer/Default Configuration/VBox/HBox"]
margin_left = 1719.0
margin_right = 1723.0
margin_bottom = 40.0

[node name="SaveConfig" type="Button" parent="TabContainer/Default Configuration/VBox/HBox"]
margin_left = 1727.0
margin_right = 1918.0
margin_bottom = 40.0
text = "Save config to manifest.json"

[node name="ConfigEditor" type="TextEdit" parent="TabContainer/Default Configuration/VBox"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 1918.0
margin_bottom = 1030.0
size_flags_vertical = 3
text = "{

}"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = true
script = ExtResource( 2 )

[node name="ValidationDelay" type="Timer" parent="TabContainer/Default Configuration/VBox/ConfigEditor"]
one_shot = true

[node name="Popup" type="WindowDialog" parent="."]
unique_name_in_owner = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 350, 120 )
window_title = "Create new mod"
resizable = true

[node name="CreateMod" parent="Popup" instance=ExtResource( 6 )]
unique_name_in_owner = true

[node name="Settings" parent="Popup/CreateMod" index="0"]
margin_right = 390.0
margin_bottom = 110.0

[node name="Scroll" parent="Popup/CreateMod/Settings" index="0"]
margin_right = 380.0
margin_bottom = 47.0

[node name="VBox" parent="Popup/CreateMod/Settings/Scroll" index="0"]
margin_right = 380.0

[node name="ModId" parent="Popup/CreateMod/Settings/Scroll/VBox" index="0"]
margin_right = 380.0

[node name="Buttons" parent="Popup/CreateMod/Settings" index="1"]
margin_top = 51.0
margin_right = 380.0
margin_bottom = 85.0

[node name="VBox" parent="Popup/CreateMod/Settings/Buttons" index="0"]
margin_right = 373.0

[node name="btn_create_mod" parent="Popup/CreateMod/Settings/Buttons/VBox" index="0"]
margin_right = 366.0

[connection signal="visibility_changed" from="." to="." method="_on_mod_tools_dock_visibility_changed"]
[connection signal="pressed" from="TabContainer/Export/HSplit/Console/HBox/CopyOutput" to="." method="_on_copy_output_pressed"]
[connection signal="pressed" from="TabContainer/Export/HSplit/Console/HBox/ClearOutput" to="." method="_on_clear_output_pressed"]
[connection signal="input_text_changed" from="TabContainer/Export/HSplit/Settings/Scroll/VBox/ModId" to="." method="_on_ModId_input_text_changed"]
[connection signal="pressed" from="TabContainer/Export/HSplit/Settings/Buttons/VBox/CreateMod" to="." method="_on_export_settings_create_new_mod_pressed"]
[connection signal="pressed" from="TabContainer/Export/HSplit/Settings/Buttons/VBox/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="TabContainer/Mod Manifest/ScrollContainer/VBox/HBoxContainer/SaveManifest" to="." method="_on_save_manifest_pressed"]
[connection signal="pressed" from="TabContainer/Default Configuration/VBox/HBox/SaveConfig" to="." method="_on_save_config_pressed"]
[connection signal="cursor_changed" from="TabContainer/Default Configuration/VBox/ConfigEditor" to="TabContainer/Default Configuration/VBox/ConfigEditor" method="_on_cursor_changed"]
[connection signal="text_changed" from="TabContainer/Default Configuration/VBox/ConfigEditor" to="TabContainer/Default Configuration/VBox/ConfigEditor" method="_on_text_changed"]
[connection signal="timeout" from="TabContainer/Default Configuration/VBox/ConfigEditor/ValidationDelay" to="TabContainer/Default Configuration/VBox/ConfigEditor" method="_on_ValidationDelay_timeout"]
[connection signal="mod_dir_created" from="Popup/CreateMod" to="." method="_on_CreateMod_mod_dir_created"]
[connection signal="input_text_changed" from="Popup/CreateMod/Settings/Scroll/VBox/ModId" to="." method="_on_ModId_input_text_changed"]

[editable path="Popup/CreateMod"]
